# internal/api/handler.go
@@ -12,8 +12,13 @@ type Handler struct {
 	svc       *service.Service
 	val       *validator.Validate
 	readiness func(context.Context) error
+	followup  func(context.Context) (bool, error)
 }
 
 func NewHandler(svc *service.Service, readiness func(context.Context) error) *Handler {
-	return &Handler{svc: svc, val: validator.New(validator.WithRequiredStructEnabled()), readiness: readiness}
+	h := &Handler{svc: svc, val: validator.New(validator.WithRequiredStructEnabled()), readiness: readiness}
+	if svc != nil {
+		h.followup = svc.FollowupAvailable
+	}
+	return h
 }
